<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/textView_searchWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/search_something"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/button_searchWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/searchWord" />

    <Button
        android:id="@+id/button_addWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addWord" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_wordlist"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>